fix: ajusted gaps in section features grid-container

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -311,7 +311,7 @@ $gradients: (
     }
 
     @include media(xl) {
-      grid-template-columns: repeat(3, min(100%, 21.4375rem));
+      grid-template-columns: repeat(3, 1fr);
       gap: 5rem 1.875rem;
     }
   }
